--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 
     --container-width-lg: 75%;
     --container-width-md: 86%;
-    --container-width-ms: 90%;
+    --container-width-sm: 90%;
 }
 
 html {
@@ -38,6 +38,7 @@ body {
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
+    background-image: url(../src/assets/bg-texture.png);
 }
 
 /* ==================== GENRERAL STYLES =============================*/
@@ -91,5 +92,47 @@ a:hover {
     display: inline-block;
     color: var(--color-primary);
     padding: 0.75rem 1.2rem;
-    
+    border-radius: 0.4rem;
+    cursor: pointer;
+    border: 1px solid var(--color-primary);
+    transition: var(--transition);
+}
+
+.btn:hover{
+    background: var(--color-white);
+    color: var(--color-bg);
+    border-color: transparent;
+}
+
+.btn-primary {
+    background-color: var(--color-primary);
+    color: var(--color-bg);
+}
+
+image {
+    display: block;
+    width: 100;
+    object-fit: cover;
+}
+
+/*================================= MEDIA QUERIES (MEDIUM DEVICES) ==============================*/
+
+@media screen and (max-width: 1024px) {
+    .container{
+        width: var(--container-width-md);
+    }
+    section {
+        margin-top: 6rem;
+    }
+}
+
+/*================================= MEDIA QUERIES (SMALL DEVICES) ==============================*/
+
+@media screen and (max-width: 600px) {
+    .container{
+        width: var(--container-width-sm);
+    }
+    section {
+        margin-top: 2rem;
+    }
 }
