--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -42,8 +42,32 @@
     color: var(--color-primary);
 }
 
+/*============================MEDIA QUERIES (MEDIUM DEVICES) ================*/
 @media screen and (max-width: 1024px) {
     .skills__container {
         grid-template-columns:1fr ;
     }
+
+    .skills__container > div {
+        width: 80%;
+        padding: 2rem;
+        margin : auto;
+    }
+
+    .skills__content {
+        padding: 1rem;
+    }
 }
+
+
+/*============================MEDIA QUERIES (SMALL DEVICES) ================*/
+@media screen and (max-width: 600px) {
+    .skills__container {
+        gap:1rem;
+    }
+    .skills__container > div {
+        width: 100%;
+        padding: 2rem 1rem;
+    }
+
+    }
