--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,6 @@ h1{
 
 section {
     margin-top: 8rem;
-    height: 100vh;
 }
 
 section > h2 , section > h5 {
@@ -73,6 +72,11 @@ section > h2 , section > h5 {
 section > h2 {
     color: var(--color-primary);
     margin-bottom: 3rem;
+}
+
+section > h3 {
+    text-align: center;
+    color: var(--color-light);
 }
 
 .text-light {
